<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transitions_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/type"
            android:layout_width="@dimen/_33sdp"
            android:layout_height="@dimen/_33sdp"
            android:background="@drawable/shape_ccc"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_check"
            app:layout_constraintBottom_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toStartOf="@+id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="@font/lato"
            android:text="@string/video"
            android:textColor="@color/tiktok"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@+id/type"
            app:layout_constraintStart_toStartOf="@+id/type"
            app:layout_constraintTop_toBottomOf="@+id/type" />


        <ImageView
            android:id="@+id/img_audio"
            android:layout_width="@dimen/_33sdp"
            android:layout_height="@dimen/_33sdp"
            android:background="@drawable/shape_tiktok"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:id="@+id/logo"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/_35sdp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="@font/lato"
            android:text="@string/audio"
            android:textColor="@color/tiktok"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@+id/img_audio"
            app:layout_constraintStart_toStartOf="@+id/img_audio"
            app:layout_constraintTop_toBottomOf="@+id/img_audio" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/ed_url"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/shape_boder"
        android:fontFamily="@font/lato"
        android:hint="@string/url_tiktok"
        android:inputType="text"
        android:paddingLeft="@dimen/_6sdp"
        android:paddingRight="@dimen/_6sdp"
        android:textColor="@color/white"
        android:textColorHint="#cccccc"
        android:textSize="@dimen/_13sdp"
        android:theme="@style/Text"
        tools:ignore="Autofill,TextFields" />


    <Button
        android:id="@+id/download"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/shape_boder"
        android:fontFamily="@font/lato"
        android:text="@string/download_audio"
        android:textAllCaps="false"
        android:textColor="#fafafa"
        android:textSize="@dimen/_13sdp"
        android:theme="@style/Text" />

    <TextView
        android:id="@+id/tv_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="@string/loading"
        android:textColor="@color/tiktok"
        android:textSize="@dimen/_20sdp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_pro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="0mb/0mb"
        android:textColor="@color/tiktok"
        android:textSize="@dimen/_15sdp"
        android:visibility="gone" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/anim_iv_downloading"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_colorFilter="@color/tiktok"
            app:lottie_fileName="download.json"
            app:lottie_loop="true" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/anim_iv_success"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/_15sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="false"
            app:lottie_fileName="success.json"
            app:lottie_loop="true" />

        <TextView
            android:alpha="0.5"
            android:layout_marginBottom="@dimen/_2sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="San Fu Lou"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>