<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <VideoView
        android:id="@+id/video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white" />


    <RelativeLayout
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true">

        <View
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:alpha="0.35"
            android:background="@drawable/shape_tiktok"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_close"
            tools:ignore="MissingConstraints" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/view_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_toRightOf="@id/view"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true">

        <View
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:alpha="0.35"
            android:background="@drawable/shape_tiktok"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_delete"
            tools:ignore="MissingConstraints" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/view_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_toRightOf="@id/view_a"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true">

        <View
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:alpha="0.35"
            android:background="@drawable/shape_tiktok"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_share_"
            tools:ignore="MissingConstraints" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_above="@id/layout"
        android:layout_margin="@dimen/_8sdp"
        android:alpha="0.35"
        android:background="@drawable/shape_boder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_above="@id/layout"
        android:layout_margin="@dimen/_8sdp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <TextView
                android:fontFamily="@font/lato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/volume"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <SeekBar
                android:id="@+id/vol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:max="100"
                android:min="0"
                android:progress="50"
                android:progressBackgroundTint="@color/white"
                android:theme="@style/Pro" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <TextView
                android:fontFamily="@font/lato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/double_click"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <Switch
                android:id="@+id/double_click"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:checked="true"
                android:gravity="right"
                android:theme="@style/Pro" />

        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:onClick="set"
        android:orientation="vertical"
        android:padding="1dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.35"
            android:background="@drawable/shape_boder" />

        <TextView
            android:fontFamily="@font/lato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setlive"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

    </RelativeLayout>


</RelativeLayout>